# sokoban

./: .cproject  .gitignore  .project  AUTHORS  Macros.tup  Makefile.in  MoveDescriptor.h  Tuprules.tup  benchmark  compile.tup  config.h.in  configure  configure.ac  corridorGen  game1.txt  game17.txt  game2.txt  game23.txt  game3.txt  game4.txt  game5.txt  game6.txt  game8.txt  game9.txt  hl  link.tup  nethack1.txt  nethack2.txt  nethack3-1.txt  nethack3.txt  nethack4a.txt  nn.txt  proba1.txt  proba2.txt  readme.md  s1.txt  s2.txt  s3.txt  s4.txt  s5.txt  (+8 more)
UnitTest/: BorderTypeIO.hpp  CheckerTest.hpp  ChokePointFinderTest.cpp  CompareQueueTest.cpp  ComplexCheckerTest.cpp  CorridorCheckerFixture.hpp  CorridorCheckerNegativeTests.cpp  CorridorCheckerPositiveTests.cpp  CorridorCheckerTest.cpp  CreateTestStatus.cpp  CreateTestStatus.hpp  DistanceCalculatorTest.cpp  DistanceCheckerTest.cpp  ExpandHelperTest.cpp  ExtendedCorridorCheckerTest.cpp  ExtendedMovableCheckerTest.cpp  FakeNodeFactory.hpp  FloodFillTest.cpp  IndexedStatusListTest.cpp  IntersectTest.cpp  IsStatusPossibleTest.cpp  IsSubStateTest.cpp  IsSubStatusTest.cpp  MockChecker.hpp  MockHeurCalculator.hpp  MovableCheckerFixture.hpp  MovableCheckerNegativeTests.cpp  MovableCheckerTest.cpp  MovableTesterPositiveTests.cpp  OperatorChecks.hpp  PointRangeTest.cpp  PrioNodeQueueTest.cpp  PrioQueueTest.cpp  SolutionCheckerTest.cpp  StatusCreatorTest.cpp  StatusTest.cpp  SubStatusForEachTest.cpp  TableIteratorTest.cpp  TableTest.cpp  Tupfile  (+3 more)
classic/: barbados.txt  branch.txt  channels.txt  comets.txt  effusive.txt
games/: corridorCheck.txt  corridorCheck2.txt  corridorCheck3.txt  corridorCheck4.txt  corridorCheckSmall.txt  game1.txt  game3.txt  game4.txt  game9.txt  nethack1.txt  nethack3.txt  s1.txt  s2.txt  s6.txt  testcases.txt
games/birthday/: 179.txt  180.txt
games/classic/: barbados.txt  branch.txt  caboose.txt  comets.txt  nightjar.txt  perverse.txt  reactor.txt
games/perfect/: 13.txt  20.txt  21.txt  23.txt
src/: AdvancedHeurCalculator.cpp  AdvancedHeurCalculator.h  AdvancedHeurCalculator.hpp  AnnotatedFunction.h  ArchiveFwd.hpp  Array.h  Array.hpp  ArrayIO.hpp  BackupSaver.hpp  BasicHeurCalculator.cpp  BasicHeurCalculator.h  BasicHeurCalculator.hpp  BasicSolver.cpp  BasicSolver.h  BlockListChecker.cpp  BlockListChecker.h  BlockListChecker.hpp  BlockListGenerator.cpp  BlockListGenerator.h  BlockListGenerator.hpp  BlockListHeurCalculator.cpp  BlockListHeurCalculator.h  BlockListHeurCalculator.hpp  Checker.h  Checker.hpp  ChokePointFinder.cpp  ChokePointFinder.hpp  Common.cpp  Common.h  Common.hpp  Compare.hpp  CompareQueue.h  CompareQueue.hpp  ComplexChecker.cpp  ComplexChecker.h  ComplexChecker.hpp  ComplexCheckerBase.hpp  ComplexCheckerFwd.hpp  ComplexExpander.cpp  ComplexExpander.h  (+146 more)
src/Checker/: BlockListChecker.cpp  BlockListChecker.hpp  Checker.hpp  ComplexCheckerBase.hpp  ComplexCheckerFwd.hpp  CorridorChecker.hpp  CorridorCheckerBase.hpp  DistanceChecker.cpp  DistanceChecker.hpp  ExtendedCorridorChecker.hpp  ExtendedMovableChecker.cpp  ExtendedMovableChecker.hpp  MovableChecker.cpp  MovableChecker.hpp  MovableCheckerImpl.hpp  NodeChecker.hpp  SolutionChecker.cpp  SolutionChecker.hpp  VisitedStateInfo.cpp  VisitedStateInfo.hpp  VisitedStates.cpp  VisitedStates.hpp  VisitedStatesChecker.hpp
src/DecisionTree/: DecisionTree.h  DecisionTree.hpp  Node.h  Node.hpp  NodeBuilder.h  NodeBuilder.hpp  OptimalSplitting.h  PrioritySplitting.h  SplittingValue.h  SplittingValue.hpp
src/Dumper/: BestDumper.cpp  BestDumper.hpp  BinaryTextTree.cpp  BinaryTextTree.h  Dumper.hpp  DumperFactory.hpp  DumperFunctions.cpp  DumperFunctions.h  DumperFunctions.hpp  IndentedOutput.h  IndentedOutput.hpp  Statistics.cpp  Statistics.hpp  StatisticsDumper.cpp  StatisticsDumper.hpp  TextDumper.cpp  TextDumper.h  TextDumper.hpp  XDumper.cpp  XDumper.h  XDumper.hpp  XML.cpp  XML.hpp
src/HeurCalculator/: AdvancedHeurCalculator.cpp  AdvancedHeurCalculator.hpp  BasicHeurCalculator.cpp  BasicHeurCalculator.hpp  BlockListGenerator.cpp  BlockListGenerator.hpp  BlockListHeurCalculator.hpp  BlockListHeurCalculatorFwd.hpp  DecisionTreeHeurCalculator.cpp  DecisionTreeHeurCalculator.hpp  DecisionTreeHeurCalculatorFwd.hpp  HeurCalculator.hpp  HeurInfo.hpp  SubStatusHeurCalculator.hpp  SubStatusHeurCalculatorFwd.hpp  TableHeurCalculator.hpp  Tupfile
src/Status/: IsStatusPossible.cpp  IsStatusPossible.hpp  MockStatus.h  Point.cpp  Point.h  Point.hpp  PointRange.h  PointRange.hpp  PseudoStatus.h  PseudoStatus.hpp  State.h  State.hpp  Status.cpp  Status.h  Status.hpp  StatusCreator.cpp  StatusCreator.h  StatusCreator.hpp  StatusUtils.cpp  StatusUtils.h  StatusUtils.hpp  Table.cpp  Table.h  Table.hpp  floodFill.cpp  floodFill.hpp
src/UnitTest/: DecisionTreeTest.cpp  IsSubStateTest.cpp  IsSubStatusTest.cpp  PointRangeTest.cpp  testMain.cpp
